<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/nav_chat" />

        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/nav_inventory" />

        <item
            android:id="@+id/nav_minimap"
            android:icon="@drawable/ic_minimap"
            android:title="@string/nav_minimap" />

        <item
            android:id="@+id/nav_avatar"
            android:icon="@drawable/ic_avatar"
            android:title="@string/nav_avatar" />

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/friends" />

        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_people"
            android:title="@string/groups" />

        <item
            android:id="@+id/nav_nearby"
            android:icon="@drawable/ic_nearby"
            android:title="@string/nearby_people" />

        <item
            android:id="@+id/nav_radar"
            android:icon="@drawable/ic_radar"
            android:title="@string/radar" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_search" />

        <item
            android:id="@+id/nav_world_map"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_world_map" />

    </group>

    <item android:title="More">
        <menu>

            <item
                android:id="@+id/nav_teleport_home"
                android:icon="@drawable/ic_home"
                android:title="@string/teleport_home" />

            <item
                android:id="@+id/nav_xr_mode"
                android:icon="@drawable/ic_xr"
                android:title="@string/nav_xr_mode" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />

        </menu>
    </item>

</menu>
