<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_wear"
        android:title="@string/wear"
        android:icon="@drawable/ic_wear"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_copy"
        android:title="@string/copy"
        android:icon="@drawable/ic_copy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_properties"
        android:title="@string/properties"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom" />

</menu>